<resources>
    <string name="app_name">MoneyCare</string>
    <string name="title_activity_login_and_registration">LoginAndRegistration</string>
    <string name="tab_text_1">Login</string>
    <string name="tab_text_2">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="swipe_left_for_register">Not Registered? Register Here</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail_or_phone">Email/Phone</string>
    <string name="e_mail">Email</string>
    <string name="phone">Mobile Number</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login"> Alredy Registered? Login Here</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="str_open">Open</string>
    <string name="str_close">Close</string>
    <string name="share_text">App Link</string>
    <string name="terms_and_conditions">I Agree to Terms and Conditions</string>
</resources>